k8s/thedefinitiveguide/chapter4/ingress/ingress-wildcard-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 8080
    - host: "*.bar.com"
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 8080
