k8s/thedefinitiveguide/chapter4/ingress/name-virtual-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
    - host: "bar.foo.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 80
