k8s/thedefinitiveguide/chapter4/ingress/simple-fanout-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: /bar
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-service
                port:
                  number: 8080
    - host: "*.bar.com"
      http:
        paths:
          - path: /foo
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-service
                port:
                  number: 8081
