k8s/thedefinitiveguide/chapter4/ingress/test-ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress1
spec:
  rules:
    - http:
        paths:
          - path: /demo
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 8080
